--- a/shop.html
+++ b/shop.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/"
-    />
+    <meta name="description" />
 
     <!-- title -->
     <title>Shop</title>
@@ -60,24 +57,9 @@
                 <ul>
                   <li>
                     <a href="index.html">Home</a>
-                    <!-- <ul class="sub-menu">
-							<li><a href="index.html">Static Home</a></li>
-							<li><a href="index_2.html">Slider Home</a></li>
-						  </ul> -->
                   </li>
                   <li><a href="about.html">Over ons</a></li>
-                  <!-- <li>
-						  <a href="#">Pages</a>
-						  <ul class="sub-menu">
-							<li><a href="404.html">404 page</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="checkout.html">Check Out</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="shop.html">Shop</a></li>
-						  </ul>
-						</li> -->
+
                   <li>
                     <a href="news.html">Blog</a>
                   </li>
@@ -126,19 +108,6 @@
     <!-- products -->
     <div class="product-section mt-150 mb-150">
       <div class="container">
-        <!-- <div class="row">
-          <div class="col-md-12">
-            <div class="product-filters">
-              <ul>
-                <li class="active" data-filter="*">All</li>
-                <li data-filter=".strawberry">Strawberry</li>
-                <li data-filter=".berry">Berry</li>
-                <li data-filter=".lemon">Lemon</li>
-              </ul>
-            </div>
-          </div>
-        </div> -->
-
         <div class="row product-lists">
           <div class="col-lg-4 col-md-6 text-center strawberry">
             <div class="single-product-item">
@@ -182,48 +151,6 @@
               >
             </div>
           </div>
-          <!-- <div class="col-lg-4 col-md-6 text-center">
-            <div class="single-product-item">
-              <div class="product-image">
-                <a href="single-product.html"
-                  ><img src="assets/img/products/product-img-4.jpg" alt=""
-                /></a>
-              </div>
-              <h3>Avocado</h3>
-              <p class="product-price"><span>Per Kg</span> 50$</p>
-              <a href="cart.html" class="cart-btn"
-                ><i class="fas fa-shopping-cart"></i> In winkelmandje</a
-              >
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 text-center">
-            <div class="single-product-item">
-              <div class="product-image">
-                <a href="single-product.html"
-                  ><img src="assets/img/products/product-img-5.jpg" alt=""
-                /></a>
-              </div>
-              <h3>Green Apple</h3>
-              <p class="product-price"><span>Per Kg</span> 45$</p>
-              <a href="cart.html" class="cart-btn"
-                ><i class="fas fa-shopping-cart"></i> In winkelmandje</a
-              >
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 text-center strawberry">
-            <div class="single-product-item">
-              <div class="product-image">
-                <a href="single-product.html"
-                  ><img src="assets/img/products/product-img-6.jpg" alt=""
-                /></a>
-              </div>
-              <h3>Strawberry</h3>
-              <p class="product-price"><span>Per Kg</span> 80$</p>
-              <a href="cart.html" class="cart-btn"
-                ><i class="fas fa-shopping-cart"></i> In winkelmandje</a
-              >
-            </div>
-          </div> -->
         </div>
 
         <!-- <div class="row">
@@ -269,30 +196,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <!-- <div class="footer-box pages">
-				  <h2 class="widget-title">Pages</h2>
-				  <ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Shop</a></li>
-					<li><a href="news.html">News</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				  </ul>
-				</div> -->
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <!-- <div class="footer-box subscribe">
-				  <h2 class="widget-title">Subscribe</h2>
-				  <p>Subscribe to our mailing list to get the latest updates.</p>
-				  <form action="index.html">
-					<input type="email" placeholder="Email" />
-					<button type="submit">
-					  <i class="fas fa-paper-plane"></i>
-					</button>
-				  </form>
-				</div> -->
-          </div>
+          <div class="col-lg-3 col-md-6"></div>
+          <div class="col-lg-3 col-md-6"></div>
         </div>
       </div>
     </div>
