--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/"
-    />
+    <meta name="description" />
 
     <!-- title -->
     <title>Contact | Eyneakker</title>
@@ -60,24 +57,9 @@
                 <ul>
                   <li>
                     <a href="index.html">Home</a>
-                    <!-- <ul class="sub-menu">
-						  <li><a href="index.html">Static Home</a></li>
-						  <li><a href="index_2.html">Slider Home</a></li>
-						</ul> -->
                   </li>
                   <li><a href="about.html">Over ons</a></li>
-                  <!-- <li>
-						<a href="#">Pages</a>
-						<ul class="sub-menu">
-						  <li><a href="404.html">404 page</a></li>
-						  <li><a href="about.html">About</a></li>
-						  <li><a href="cart.html">Cart</a></li>
-						  <li><a href="checkout.html">Check Out</a></li>
-						  <li><a href="contact.html">Contact</a></li>
-						  <li><a href="news.html">News</a></li>
-						  <li><a href="shop.html">Shop</a></li>
-						</ul>
-					  </li> -->
+
                   <li>
                     <a href="news.html">Blog</a>
                   </li>
@@ -92,9 +74,6 @@
                       <a class="shopping-cart" href=""
                         ><i class="fas fa-shopping-cart"></i
                       ></a>
-                      <!-- <a class="mobile-hide search-bar-icon" href="#"
-							><i class="fas fa-search"></i
-						  ></a> -->
                     </div>
                   </li>
                 </ul>
@@ -236,30 +215,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <!-- <div class="footer-box pages">
-				<h2 class="widget-title">Pages</h2>
-				<ul>
-				  <li><a href="index.html">Home</a></li>
-				  <li><a href="about.html">About</a></li>
-				  <li><a href="services.html">Shop</a></li>
-				  <li><a href="news.html">News</a></li>
-				  <li><a href="contact.html">Contact</a></li>
-				</ul>
-			  </div> -->
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <!-- <div class="footer-box subscribe">
-				<h2 class="widget-title">Subscribe</h2>
-				<p>Subscribe to our mailing list to get the latest updates.</p>
-				<form action="index.html">
-				  <input type="email" placeholder="Email" />
-				  <button type="submit">
-					<i class="fas fa-paper-plane"></i>
-				  </button>
-				</form>
-			  </div> -->
-          </div>
+          <div class="col-lg-3 col-md-6"></div>
+          <div class="col-lg-3 col-md-6"></div>
         </div>
       </div>
     </div>
