--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/"
-    />
+    <meta name="description" />
 
     <!-- title -->
     <title>Home | Eyneakker</title>
@@ -41,14 +38,6 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body>
-    <!--PreLoader-->
-    <!-- <div class="loader">
-      <div class="loader-inner">
-        <div class="circle"></div>
-      </div>
-    </div> -->
-    <!--PreLoader Ends-->
-
     <!-- header -->
     <div class="top-header-area" id="sticker">
       <div class="container">
@@ -68,24 +57,9 @@
                 <ul>
                   <li class="current-list-item">
                     <a href="index.html">Home</a>
-                    <!-- <ul class="sub-menu">
-                      <li><a href="index.html">Static Home</a></li>
-                      <li><a href="index_2.html">Slider Home</a></li>
-                    </ul> -->
                   </li>
                   <li><a href="about.html">Over ons</a></li>
-                  <!-- <li>
-                    <a href="#">Pages</a>
-                    <ul class="sub-menu">
-                      <li><a href="404.html">404 page</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="cart.html">Cart</a></li>
-                      <li><a href="checkout.html">Check Out</a></li>
-                      <li><a href="contact.html">Contact</a></li>
-                      <li><a href="news.html">News</a></li>
-                      <li><a href="shop.html">Shop</a></li>
-                    </ul>
-                  </li> -->
+
                   <li>
                     <a href="news.html">Blog</a>
                   </li>
@@ -98,9 +72,6 @@
                       <a class="shopping-cart" href=""
                         ><i class="fas fa-shopping-cart"></i
                       ></a>
-                      <!-- <a class="mobile-hide search-bar-icon" href="#"
-                        ><i class="fas fa-search"></i
-                      ></a> -->
                     </div>
                   </li>
                 </ul>
@@ -114,27 +85,6 @@
       </div>
     </div>
     <!-- end header -->
-
-    <!-- search area -->
-    <!-- <div class="search-area">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <span class="close-btn"><i class="fas fa-window-close"></i></span>
-            <div class="search-bar">
-              <div class="search-bar-tablecell">
-                <h3>Search For:</h3>
-                <input type="text" placeholder="Keywords" />
-                <button type="submit">
-                  Search <i class="fas fa-search"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- end search area -->
 
     <!-- hero area -->
     <div class="hero-area hero-bg">
@@ -156,50 +106,6 @@
       </div>
     </div>
     <!-- end hero area -->
-
-    <!-- features list section -->
-    <!-- <div class="list-section pt-80 pb-80">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-            <div class="list-box d-flex align-items-center">
-              <div class="list-icon">
-                <i class="fas fa-shipping-fast"></i>
-              </div>
-              <div class="content">
-                <h3>Free Shipping</h3>
-                <p>When order over $75</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-            <div class="list-box d-flex align-items-center">
-              <div class="list-icon">
-                <i class="fas fa-phone-volume"></i>
-              </div>
-              <div class="content">
-                <h3>24/7 Support</h3>
-                <p>Get support all day</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div
-              class="list-box d-flex justify-content-start align-items-center"
-            >
-              <div class="list-icon">
-                <i class="fas fa-sync"></i>
-              </div>
-              <div class="content">
-                <h3>Refund</h3>
-                <p>Get refund within 3 days!</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- end features list section -->
 
     <!-- product section -->
     <div class="product-section mt-150 mb-150">
@@ -469,39 +375,6 @@
     </div>
     <!-- end testimonail-section -->
 
-    <!-- advertisement section -->
-    <!-- <div class="abt-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-12">
-            <div class="abt-bg">
-              
-              <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/690279212?h=08760ea1a0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="voorstelling.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-12">
-            <div class="abt-text">
-              <p class="top-sub">Sinds 2011</p>
-              <h2>Raphael's <span class="orange-text">Kruidentocht</span></h2>
-              <p>
-                Etiam vulputate ut augue vel sodales. In sollicitudin neque et
-                massa porttitor vestibulum ac vel nisi. Vestibulum placerat eget
-                dolor sit amet posuere. In ut dolor aliquet, aliquet sapien sed,
-                interdum velit. Nam eu molestie lorem.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Sapiente facilis illo repellat veritatis minus, et labore minima
-                mollitia qui ducimus.
-              </p>
-              <a href="about.html" class="boxed-btn mt-4">Meer weten </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- end advertisement section -->
-
     <!-- footer -->
     <div class="footer-area">
       <div class="container">
@@ -528,30 +401,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <!-- <div class="footer-box pages">
-              <h2 class="widget-title">Pages</h2>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Shop</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </div> -->
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <!-- <div class="footer-box subscribe">
-              <h2 class="widget-title">Subscribe</h2>
-              <p>Subscribe to our mailing list to get the latest updates.</p>
-              <form action="index.html">
-                <input type="email" placeholder="Email" />
-                <button type="submit">
-                  <i class="fas fa-paper-plane"></i>
-                </button>
-              </form>
-            </div> -->
-          </div>
+          <div class="col-lg-3 col-md-6"></div>
+          <div class="col-lg-3 col-md-6"></div>
         </div>
       </div>
     </div>
